tests/NormalTests/paczka1/small_fuzzy/46369513.err
Error in line 5: uen K812 32,6
Error in line 8: yx78l A570 43,4
Error in line 10: yx78l A381 75,1
Error in line 11: yx78l S812 50,4
